--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.about {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.about img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.about .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .about { 
     text-align: center;
   }
 }
