--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-wrapper {
@@ -138,7 +138,7 @@ li >  label {
 }
 
 li >  input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .delete img {
@@ -161,12 +161,12 @@ li >  input[type="text"] {
 /* Edit Task */
 
 li input[type=text] {
-  display: none
+  display: none;
 }
 
 .edit-Mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-Mode label {
